--- a/001/index.html
+++ b/001/index.html
@@ -6,7 +6,7 @@
     <title>Bugdroid</title>
 </head>
 <link rel="stylesheet" href="style.css">
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
 <body>
     <header>
         <h1>
