--- a/exercicios/ex022/index.html
+++ b/exercicios/ex022/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +8,23 @@
 </head>
 <body>
     <div class="quadrado" id="q1">
-        <h1>Hello World.</h1>
+        <article>
+            <h1>Hello World</h1>
+            <p>Quadrado 1</p>
+        </article>
     </div>
-    <div class="quadrado" id="q2"></div>
-    <div class="quadrado" id="q3"></div>
+    <div class="quadrado" id="q2">
+        <article>
+            <h1>Hello World</h1>
+            <p>Quadrado 2</p>
+        </article>
+    </div>
+    <div class="quadrado" id="q3">
+        <article>
+            <h1>Hello World</h1>
+            <p>Quadrado 3</p>
+        </article>
+    </div>
+
 </body>
 </html>
