--- a/001/index.html
+++ b/001/index.html
@@ -36,6 +36,7 @@
             </h2>
 
             <p>
+                oi braia
                 A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado Dan Morril. Ele conta que abriu o Inkscape (software livre para vetorização de imagens) e criou sua propria versão de robô. O objetivo era apenas personificar o sistema apenas para a sua equipe, não existia nenhuma solicitação da empresa para a criação do mascote.
             </p>
 
