--- a/exercicios/ex022/fundo002/index.html
+++ b/exercicios/ex022/fundo002/index.html
@@ -7,7 +7,7 @@
 
     <style>
         div.bloco{
-            background-image: url(../ex022/imagens/wallpaper003.jpg);
+            background-image: url(../imagens/wallpaper003.jpg);
             height: 200px;
             border: 1px solid black;
             border-radius: 5px;
