--- a/exercicios/ex025/iframe001/index.html
+++ b/exercicios/ex025/iframe001/index.html
@@ -22,7 +22,7 @@
     <h1>Teste com Iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore laborum consectetur impedit minima sed? Quam numquam dolore consectetur ab corporis maxime, deleniti at voluptatem soluta, quisquam nemo. Odit, et explicabo.</p>
 
-    <iframe src="iframe001/paginas-extras/pag002.html" frameborder="0">
+    <iframe src="../paginas-extras/pag001.html" frameborder="0">
         <p class="erro"> seu dispositivo não é compativel com isso </p>
     </iframe>
 
