--- a/desafios/014/index.html
+++ b/desafios/014/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    
+    <main>
+        <section id="telefone">
+            <iframe src="home.html" name="tela" frameborder="0" id="tela"></iframe>
+        </section>
+        <section id="redes">
+        </section>
+    </main>
+
+
 </body>
 </html>
