--- a/desafios/014/index.html
+++ b/desafios/014/index.html
@@ -10,9 +10,26 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" name="tela" frameborder="0" id="tela"></iframe>
+            <iframe src="home.html" name="tela" id="tela" frameborder="0">
+                <p>Navegador não compatível</p>
+            </iframe>
         </section>
         <section id="redes">
+            <a href="home.html" target="tela">
+                <img src="imagens/logo-home.jpg" alt="home">
+            </a><br>
+            <a href="yt.html" target="tela">
+                <img src="imagens/logo-youtube.jpg" alt="youtube">
+            </a><br>
+            <a href="insta.html" target="tela">
+                <img src="imagens/logo-instagram.jpg" alt="instagram">
+            </a><br>
+            <a href="git.html" target="tela">
+                <img src="imagens/logo-github.jpg" alt="github">
+            </a><br>
+            <a href="face.html" target="tela">
+                <img src="imagens/logo-facebook.jpg" alt="facebook">
+            </a>
         </section>
     </main>
 
