--- a/exercicios/ex026/form001/index.html
+++ b/exercicios/ex026/form001/index.html
@@ -9,7 +9,7 @@
     </style>
 </head>
 <body>
-    <form action="cadastro.php" method="get">
+    <form action="cadastro.php" method="post">
         <p>
         <label for="ifoto">Foto de Perfil:</label>
         <input type="file" name="foto" id="ifoto" accept="image/*">
