--- a/exercicios/ex026/teste002/index.html
+++ b/exercicios/ex026/teste002/index.html
@@ -10,7 +10,7 @@
     <form action="cad.php" method="post" autocomplete="on">
         <p>
             <label for="iname">Nome:</label>
-            <input type="text" nome="nome" id="iname" placeholder="Nome completo" size="15" required minlength="10" maxlength="30" autocomplete="name">
+            <input type="text" name="nome" id="iname" placeholder="Nome completo" size="15" required minlength="10" maxlength="30" autocomplete="name">
         </p>
         <p>
             <label for="imedia">Média:</label>
