--- a/exercicios/ex026/teste006/index.html
+++ b/exercicios/ex026/teste006/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="../cad.php" method="post">
+    <form action="../cad.php" method="post" autocomplete="on">
         <p>
             
             <label for="ireg">Região</label>
