--- a/exercicios/ex027/mq01/index.html
+++ b/exercicios/ex027/mq01/index.html
@@ -3,9 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Media Query</title>
+    <link rel="stylesheet" href="estilos/tela.css" media="screen">
+    <link rel="stylesheet" href="estilos/impressora.css" media="print">
 </head>
 <body>
-    
+    <header>
+        <h1>Notícias</h1>
+        <menu>
+            <ul>
+                <li>Esportes</li>
+                <li>Política</li>
+                <li>Tecnologia</li>
+            </ul>
+        </menu>
+    </header>
+    <main>
+        <article>
+            <h2>Titulo 2</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente dignissimos pariatur quaerat illum repellat? Officiis recusandae, consectetur error ad quasi ratione voluptate natus ullam at repellat neque? Dolorum, omnis quia.</p>
+
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente dignissimos pariatur quaerat illum repellat? Officiis recusandae, consectetur error ad quasi ratione voluptate natus ullam at repellat neque? Dolorum, omnis quia.</p>
+            
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente dignissimos pariatur quaerat illum repellat? Officiis recusandae, consectetur error ad quasi ratione voluptate natus ullam at repellat neque? Dolorum, omnis quia.</p>
+        </article>
+    </main>
 </body>
 </html>
