--- a/exercicios/ex027/mq03/index.html
+++ b/exercicios/ex027/mq03/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mobile first</title>
+    <link rel="stylesheet" href="estilos/tv.css" media="screen">
+    <link rel="stylesheet" href="estilos/tablet.css" media="screen">
+    <link rel="stylesheet" href="estilos/desk.css" media="screen">
+    <link rel="stylesheet" href="estilos/style.css" media="screen">
 </head>
 <body>
-    
+    <main>
+        <h1>Testando Media Queries</h1>
+        <img id="phone" src="image/icon-phone.png" alt="Acessando por smartphone">
+        <img id="tablet" src="image/icon-tablet.png" alt="Acessando por tablet">
+        <img id="print" src="image/icon-impressora.png" alt="Versão para impressão">
+        <img id="pc" src="image/icon-pc.png" alt="Versão para desktop">
+        <img id="tv" src="image/smart-tv.png" alt="Versão para telas grandes">
+    </main>
 </body>
 </html>
